# characterizing-5g-throughput

./: 5G_throughput_characterization.ipynb  README.md  main.py  pyproject.toml  requirements.txt
artifacts/2025-10-15_11-02-43/: config.yaml
artifacts/2025-10-15_11-02-43/eval/: metrics_test.json
artifacts/2025-10-15_11-02-43/models/: summary_metrics_val.json
data/: throughput.csv
notebooks/: explainability.ipynb
src/char5g/: data_loader.py  eval.py  pipeline.py  train.py  utils.py
